# my-street-analytics

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  profiles.yml  pyproject.toml  requirements.txt  sample.env
data/: area_map.json  source.json
dbt/: dbt_project.yml
dbt/models/dim/: dim_event_category.sql  dim_event_type.sql  dim_parish.sql  dim_parish_subsection.sql  schema.yml
dbt/models/mart/: fact_street_events.sql  schema.yml  view_street_events.sql
dbt/models/staging/: schema.yml  stg_street_events.sql
docker/: py.Dockerfile
src/my_street_analytics/: extract_data.py  transform_data.py
src/my_street_analytics/data/: load_data.py
terraform/: main.tf  terraform.tfstate
